Overflow fix II

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,9 +11,11 @@
 }
 html {
    overflow: hidden !important;
+   min-height: 100vh;
+   max-height: 100vh;
 }
 body {
-   background: url('../img/stars.png'), $deepBlue;
+   background: url(../img/stars.png), $deepBlue;
    max-height: 100vh;
    min-height: 100vh;
    overflow: hidden !important;
@@ -21,7 +23,7 @@ body {
 
 
 .closure {
-   position: relative;
+   position: fixed;
    width: 100%;
    height: 100vh;
    max-height: 100vh;
@@ -32,8 +34,9 @@ body {
 nav.sidebar {
    width: 100vw;
    max-width: 500px;
-   height: 100vh;
-   position: absolute;
+   min-height: 100vh;
+   max-height: 100vh;
+   position: fixed;
    z-index: 10;
    top: 0;
    left: 0;
@@ -375,7 +378,6 @@ main {
       width: 100%;
       margin: auto;
       margin-left: 5px;
-      margin-bottom: -10px;
 
       img {
          width: 100%;
